updated package.json dependencies

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "dependencies": {
     "@astropub/codecs": "^0.4.4",
     "astro": "next",
-    "imagetools-core": "^3.0.2",
-    "potrace": "^2.1.8",
-    "sharp": "^0.29.3",
-    "vite-imagetools": "^4.0.3"
+    "potrace": "^2.1.8"
+  },
+  "optionalDependencies": {
+    "imagetools-core": "^3.0.2"
   }
 }
