added sizes prop functionality

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build@static": "astro build --experimental-static-build"
   },
   "dependencies": {
+    "@astrojs/renderer-lit": "^0.3.1",
+    "@astrojs/renderer-solid": "^0.3.1",
     "astro": "^0.23.0-next.6",
-    "astro-imagetools": "^0.0.16"
+    "astro-imagetools": "^0.0.16",
+    "object-hash": "^3.0.0"
   }
 }
